--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
     <body>
         <div class="main-container">
             {{>header}}
+            <p>This site was created by Huy Vo. It uses data from mapbox.com and weatherstack.com</p>
         <img class="portrait" src="./img/me.jpg" width=500 height=500/>
         
         </div>
